gcc/testsuite/rust/rustc/ui/tool-attributes/invalid-tool.rs
#![feature(register_tool)]

#![register_tool(1)]
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

